feat: expose qsa assignment api
